# toxcore-testnet

./: .gitignore  AUDIT.md  GAPS.md  PLAN.md  README.md  ROADMAP.md  go.mod
.github/workflows/: testnet.yml
cmd/go-testnode/: go.mod  main.go
cmd/report/: main.go
integration/: doc.go  integration_test.go  node.go  report.go
scripts/: build-ctoxcore.sh  build-tox-rs.sh
testnode/ctoxcore/: CMakeLists.txt  main.c
testnode/tox_rs/: Cargo.toml
testnode/tox_rs/src/: main.rs
