[package]
name = "rust-testnode"
version = "0.1.0"
edition = "2021"
description = "tox-rs/tox implementation test node for the toxcore cross-implementation testnet"

[[bin]]
name = "rust-testnode"
path = "src/main.rs"

[dependencies]
# tox-rs/tox is consumed directly from its Git repository to ensure we test
# the actual canonical Rust implementation rather than a potentially stale
# crates.io snapshot.
tox = { git = "https://github.com/tox-rs/tox", branch = "master" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
futures = "0.3"
rand = "0.8"
