[package]
name = "rust-testnode"
version = "0.1.0"
edition = "2021"
description = "tox-rs/tox implementation test node for the toxcore cross-implementation testnet"

[[bin]]
name = "rust-testnode"
path = "src/main.rs"

[dependencies]
# NOTE: The tox dependency is commented out because tox-rs/tox has restructured
# its API and no longer provides a high-level Tox struct. The rust-testnode
# currently reports all tests as not_implemented.
#
# tox = { git = "https://github.com/tox-rs/tox", branch = "master" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
